Removed Gordy's from sponsor lists

--- a/index.html
+++ b/index.html
@@ -161,11 +161,9 @@
 	             <img class="indexTitleSponsor" src="images/sponsors/scheelsLarge.png" alt="Scheels">
 	           </a>
 
-           <a href="http://www.gordyscountymarket.net" target="_blank">
-             <img class="indexTitleSponsor" src="images/sponsors/gordysLarge.png" alt="Gordy's County Market"></a>
-
-        <a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
-					<img class="indexTitleSponsor" src="images/sponsors/Subway.png" alt="Subway"></a>
+		        <a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
+							<img class="indexTitleSponsor" src="images/sponsors/Subway.png" alt="Subway">
+						</a>
          </div>
 
 				 	</div>
