Overall Update for Website
Took Gordy’s off of the directions page
Added new images to the images folder
Added details for event on index page
Made placeholder for live results page
Updated all places for lodging, updated pdf
Added caveat for the prize list
Edited sponsors
Changed rules for tickets, added new eventbrite page

--- a/liveResults.html
+++ b/liveResults.html
@@ -121,7 +121,7 @@
           <br /> <!-- BREAK -->
           <br /> <!-- BREAK -->
           <h2 class="headers">Live Results</h2>
-					<p>This will be updated periodically, so keep checking. It will be sorted by time when the fish was weighed.</p>
+					<h3>Join us on February 10th on this page for live updates!</h3>
         </div>
 				<div class="col-xs-6">
 					<br /> <!-- BREAK -->
@@ -131,7 +131,7 @@
 					<br /> <!-- BREAK -->
           <br /> <!-- BREAK -->
 					<br /> <!-- BREAK -->
-					<h3 class="headers">Follow us on Twitter @UwecRecreation and post your Jig's Up photos with #JigsUp for chances to win prizes every hour!</h3>
+					<h3 class="headers">Like us on <a href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">Facebook</a> for updates</h3>
 					<br /> <!-- BREAK -->
 					<br /> <!-- BREAK -->
 					<br /> <!-- BREAK -->
@@ -139,16 +139,12 @@
         <!-- #col-sm-6 -->
       </div>
       <!-- #container -->
-			<div class="fluidmedia">
+			<!-- <div class="fluidmedia">
 
       	<iframe src=""></iframe>
 
-			</div>
+			</div> -->
 			<!-- #table-responsive -->
-      <br /> <!-- BREAK -->
-      <br /> <!-- BREAK -->
-      <br /> <!-- BREAK -->
-      <br /> <!-- BREAK -->
   </section>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
