--- a/prizes.html
+++ b/prizes.html
@@ -122,6 +122,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<h2 class="headers">Prizes</h2>
+					<h3 class="headers">2017 Prize List, check back in February for 2018 Prize List</h3>
 					<div class="bs-example1">
 						<div id="myCarousel" class="carousel slide" data-ride="carousel1">
 							<!-- Wrapper for carousel items -->
