--- a/sponsors.html
+++ b/sponsors.html
@@ -122,13 +122,16 @@
 				<div class="text-center">
 					<h2 class="headers"><b>Title Sponsors</b></h2>
 				</div>
-
+				<br />
+				<!-- BREAK -->
+				<br />
+				<!-- BREAK -->
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-sm-4 center">
+				<div class="col-sm-6 center">
 					<a href="http://www.scheels.com" target="_blank"><img class="img-responsive center img-large" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
 				</div>
 
-				<div class="col-sm-4 center">
+				<div class="col-sm-6 center">
 					<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="img-responsive center img-large" src="images/sponsors/Subway.png" alt="Subway"></a>
 				</div>
 			</div>
@@ -145,114 +148,46 @@
 					<div class="col-sm-3 center">
 						<a href="http://www.geteskimo.com/" target="_blank"><img class="img-responsive center img-ml" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
 					</div>
-
 					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 					<div class="col-sm-3 center">
 						<a href="http://www.prestigervauto.com/" target="_blank"><img class="img-responsive center img-ml" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
 					</div>
 					<div class="col-sm-3 center">
-						<a href="http://www.weau.com/" target="_blank"><img class="img-responsive center img-ml" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
+						<a href="http://www.megacoop.com/" target="_blank"><img class="img-responsive center img-ml" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
 					</div>
 				</div>
 
 
 				<div class="row">
 					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-					<div class="col-sm-4 center">
+					<div class="col-sm-3 center">
 						<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
 					</div>
 					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-					<div class="col-sm-4 center">
+					<div class="col-sm-3 center">
 						<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/view.png" alt="The View"></a>
 					</div>
 					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-					<div class="col-sm-4 center">
-						<a href="http://www.gollonbait.com/" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/gollon.png" alt="Gollon brothers"></a>
+					<div class="col-sm-3 center">
+						<a href="http://www.leinie.com" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
+					</div>
+					<div class="col-sm-3 center">
+						<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/xtreme.png" alt="Xtreme Motorsports, LLC"></a>
 					</div>
 				</div>
 				<br />
 				<!-- BREAK -->
-				<div class="row">
+			<div class="row">
 
-					<div class="col-sm-3 center">
-						<a href="http://www.uwec.edu/dining/" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo"></a>
-					</div>
-
-					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-
-					<div class="col-sm-3 center">
-						<a href="https://mydynamicfitness.com/" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/dynamic.png" alt="Dynamic Fitness and Strength"></a>
-					</div>
-
-					<div class="col-sm-3 center">
-					<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/xtreme.png" alt="Xtreme Motorsports, LLC"></a>
-					</div>
-					<div class="col-sm-3 center">
-						<a href="http://www.leinie.com" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
-					</div>
-
-					<div class="row">
-						<div class="col-sm-4 center">
-							<a href="http://briggstent.com/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/briggs.png"></a>
-						</div>
-						<div class="col-sm-4 center">
-							<a href="https://www.chanhassentheatres.com/Online/default.asp" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/chanhassen.png"></a>
-						</div>
-						<div class="col-sm-4 center">
-							<a href="http://www.packers.com/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/gb.png"></a>
-						</div>
-					</div>
-
-					<div class="row">
-						<div class="col-sm-4 center" style="margin-top: 6px";>
-							<a href="http://www.vexilar.com/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/vexilar.png"></a>
-						</div>
-						<div class="col-sm-4 center">
-							<a href="http://www.nba.com/bucks/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/mb.png"></a>
-						</div>
-						<div class="col-sm-4 center">
-							<a href="https://www.otterbox.com/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/ob.png"></a>
-						</div>
-					</div>
-
-					<div class="row">
-						<div class="col-sm-4 center">
-							<a href="http://www.ho-chunk.com/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/ho-chunk.png"></a>
-						</div>
-						<div class="col-sm-4 center">
-							<a href="http://milwaukee.brewers.mlb.com/index.jsp?c_id=mil" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/brew.png"></a>
-						</div>
-						<div class="col-sm-4 center" style="margin-top: 7px";>
-							<a href="http://www.jawjackerfishing.com/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/jawjacker.png"></a>
-						</div>
-					</div>
-
-					<div class="row">
-						<div class="col-sm-4 center">
-							<a href="http://ifishpro.com/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/ifishpro.png"></a>
-						</div>
-						<div class="col-sm-4 center">
-							<a href="http://fishdangler.com/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/dangler.png"></a>
-						</div>
-						<div class="col-sm-4 center">
-							<a href="http://stcroixrods.com/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/stcroix.png"></a>
-						</div>
-					</div>
-
-					<div class="row">
-						<div class="col-sm-4 center">
-							<a href="http://www.rod-n-bobbs.com/index.php?page=home" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/rnb.png"></a>
-						</div>
-						<div class="col-sm-4 center" style="margin-top: 18px">
-							<a href="https://www.visiteauclaire.com/?gclid=CKn55tu-gdICFYWCaQodzkgL7g" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/visitec.png"></a>
-						</div>
-						<div class="col-sm-4 center" style="margin-top: 18px">
-							<a href="http://www.jiffyonice.com/EComStore/pages/home.aspx" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/jiffy.jpg"></a>
-						</div>
-					</div>
-
-			<!-- #row  -->
+				<div class="col-sm-3 center">
+					<a href="http://www.uwec.edu/dining/" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo"></a>
 				</div>
+					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+				<div class="col-sm-3 center">
+					<a href="http://www.gollonbait.com/" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/gollon.png" alt="Gollon brothers"></a>
+				</div>
+			<!-- #row  -->
+			</div>
 				<div class="row">
 					<div class="col-lg-12 center">
 						<h4 class="headers">If you wish to become a sponsor, please contact us through our contact page.</h4>
