--- a/index-before.html
+++ b/index-before.html
@@ -174,9 +174,8 @@
 
 
     <div class="text-center">
-			<h3 class="headers"><b>Check back later for the final results!</b></h3>
-      <h1 class="headers"><b>4th Annual Jig's Up Ice Fishing Contest</b></h1>
-      <h5 class="headers">Presented by UWEC Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
+			<h4 class="headers">UWEC Recreation, Blugold Athletics, and the Wissota Lions Club presents:</h4>
+      <h1 class="headers"><b>5th Annual Jig's Up Ice Fishing Contest</b></h1>
       <img alt="Sponsors Logo" src="images/3logo-bg.png">
       <div class="horizbar"></div>
 
@@ -193,38 +192,48 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <h3 class="headers"><b>When:</b></h3>
-          <h3>Saturday, February 11th, 2017; 7am-2pm</h3>
+          <h3 class="headers"><b>Date:</b></h3>
+          <h3>Saturday, February 10th, 2018</h3>
           <br />
           <!-- BREAK -->
+					<br />
+					<h3 class="headers"><b>Time:</b></h3>
+          <h3>7am-2pm, no pre-registration</h3>
           <br />
           <!-- BREAK -->
-          <h3 class="headers"><b>Where:</b></h3>
-          <h3> Lake Wissota</h3>
-          <blockquote>
-            <b>Weigh-In Stations:</b> The Edge Pub &amp; The View
-            <br />
-            <!-- BREAK -->
-            <b>Prize Distribution:</b> The View on Lake Wissota, 3pm Raffle Prizes, Fish Prizes to be drawn right after
-          </blockquote>
+					<br />
+          <h3 class="headers"><b>Site:</b></h3>
+	          <blockquote>
+	            <b>Weigh-In Stations:</b> The Edge Pub &amp; Eatery and The View on Lake Wissota
+	            <br />
+	            <!-- BREAK -->
+	            <b>Prize Distribution:</b> The View on Lake Wissota, 3pm Raffle Prizes
+	          </blockquote>
 
-      <h3>Scheels Kids Ice Fishing Clinic</h3>
-				<blockquote>
-					On the ice Saturday, February 11th starting at 12pm in front of The View in the Kids Klub area.
-					Holes will be drilled and lunch will be provided for the kids; <b> gear is NOT provided. </b> This event is FREE for kids up to age 12, prizes will be awarded for fish caught.
-					Any fish caught in the Kid’s Club area will be marked and will not be eligible to register in the Jig’s Up Blugold Ice Fishing Contest.
-				</blockquote>
-          <p>
-            <i>
-              The Wissota Lions Club will have food and beverages available on the ice. All state regulations and bag limits
-						  apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest
-              includes, northern, walleye, and panfish (perch, bluegills, crappies).<a href="http://dnr.wi.gov/topic/fishing/regulations/"> Click here to reference the Wisconsin DNR website. </a>
-            </i>
-          </p>
-          <br />
-          <!-- BREAK -->
-          <br />
-          <!-- BREAK -->
+		      <h3 class="headers"><b>Prize Information:</b></h3>
+						<blockquote>
+							Over $80,000 in cash and prizes including a
+							<b>2017 Ice Castle Scout</b>, win a <b>Ford F150 Truck</b> if you
+							catch and register the tagged fish!   Prizes awarded to
+							the top 25 fish by weight and every 5th place thereafter
+							to 300th place so even a small fish can win big!  <b>Each
+							participant may register one fish per ticket</b>; tickets are $25
+							with no limit on the number of tickets an individual can purchase. 
+							Raffle prizes include a <b>2017 Polaris Sportsman 450 4-wheeler</b>,
+							raffle tickets are $5 each or 5 for $20!  Prizes for the top fish
+							by weight in each category: northern, walleye, and pan fish.
+						</blockquote>
+		          <p>
+								<i>
+									All state regulations and bag limits apply and no person may bring in
+									more than the legal limit of fish allowed, which for this contest
+									includes northern, walleye, and pan fish (perch, bluegills, crappies).
+								</i>
+							</p>
+		          <br />
+		          <!-- BREAK -->
+		          <br />
+		          <!-- BREAK -->
         </div>
 
         <!-- #col-sm-6  -->
@@ -232,8 +241,7 @@
 
 						<h3 class="headers"><b>Social Media</b></h3>
 							<blockquote>
-							Like us on <a href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">Facebook</a> and follow us on <a href="https://twitter.com/uwecrecreation">Twitter</a> to receive updates and enter to win prizes the day of the event.
-							Keep your eyes out for our traveling Ice Castle at local Gordy's and Scheel's stores. Share your pictures of the Castle to enter to win a prize on February 11th.
+							Like us on <a href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">Facebook</a> to receive updates.
 						</blockquote>
 
           <!-- BREAK -->
@@ -257,6 +265,14 @@
     <br />
     <!-- BREAK -->
   </section>
+
+	<p>
+		<i>
+			The Wissota Lions Club will have food and beverages available on the ice. All state regulations and bag limits
+			apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest
+			includes, northern, walleye, and panfish (perch, bluegills, crappies).<a href="http://dnr.wi.gov/topic/fishing/regulations/"> Click here to reference the Wisconsin DNR website. </a>
+		</i>
+	</p>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
