--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
 
 
     <div class="text-center">
-      <h1 class="headers"><b>5th Annual Jig's Up Ice Fishing Contest</b></h1>
-      <h5 class="headers">Presented by UWEC Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
+			<h4 class="headers">UWEC Recreation, Blugold Athletics, and the Wissota Lions Club presents:</h4>
+      <h1 class="headers"><b>5th Annual JIG'S UP Ice Fishing Contest</b></h1>
       <img alt="Sponsors Logo" src="images/3logo-bg.png">
       <div class="horizbar"></div>
 
@@ -186,18 +186,89 @@
 		</div>
 
   </section>
-  <section id="content">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-					<h2 class="headers">Give us your feedback and you could win tickets for 2018!  Click <a href="https://uweauclaire.qualtrics.com/SE/?SID=SV_bOcc1GKJQKury4Z">HERE</a> to complete the short survey.</h2>
-					<br />
-				</div>
-			</div>
-		</div>
+					<section id="content">
+				    <div class="container">
+				      <div class="row">
+				        <div class="col-sm-6">
+				          <h3 class="headers"><b>Date:</b></h3>
+				          <h3>Saturday, February 10th, 2018</h3>
+									<br />
+				          <!-- BREAK -->
+									<br />
+									<h3 class="headers"><b>Time:</b></h3>
+				          <h3>7am-2pm, no pre-registration</h3>
+				          <br />
+				          <!-- BREAK -->
+									<br />
+				          <h3 class="headers"><b>Site:</b></h3>
+					          <blockquote>
+					            <b>Weigh-In Stations:</b> The Edge Pub &amp; Eatery and The View on Lake Wissota
+					            <br />
+					            <!-- BREAK -->
+					            <b>Prize Distribution:</b> The View on Lake Wissota starting at 3pm
+					          </blockquote>
 
+						      <h3 class="headers"><b>Prize Information:</b></h3>
+										<blockquote>
+											Over $80,000 in cash and prizes including a
+											<b>2017 Ice Castle Scout</b>, win a <b>Ford F150 Truck</b> if you
+											catch and register the tagged fish!   Prizes awarded to
+											the top 25 fish by weight and every 5th place thereafter
+											to 300th place so even a small fish can win big!  <b>Each
+											participant may register one fish per ticket</b>; tickets are $25
+											with no limit on the number of tickets an individual can purchase. 
+											Raffle prizes include a <b>2017 Polaris Sportsman 450 4-wheeler</b>,
+											raffle tickets are $5 each or 5 for $20!  Prizes for the top fish
+											by weight in each category: northern, walleye, and pan fish.
+										</blockquote>
+						          <p>
+												<i>
+													All state regulations and bag limits apply and no person may bring in
+													more than the legal limit of fish allowed, which for this contest
+													includes northern, walleye, and pan fish.
+												</i>
+											</p>
+						          <br />
+						          <!-- BREAK -->
+						          <br />
+						          <!-- BREAK -->
+				        </div>
 
-  </section>
+				        <!-- #col-sm-6  -->
+				        <div class="col-sm-6">
+
+										<h3 class="headers"><b>Social Media</b></h3>
+											<blockquote>
+											Like us on <a href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">Facebook</a> to receive updates.
+										</blockquote>
+
+				          <!-- BREAK -->
+				          <div class="videowrapper">
+				          	<iframe width="560" height="315" src="https://www.youtube.com/embed/t4Wp4-lS0Bg" frameborder="0" allowfullscreen></iframe>
+
+				          </div>
+
+				        </div>
+				        <!-- #col-sm-6  -->
+				      </div>
+				      <!-- #row  -->
+				    </div>
+				    <!-- #container  -->
+				    <br />
+				    <!-- BREAK -->
+				    <br />
+				    <!-- BREAK -->
+				    <br />
+				    <!-- BREAK -->
+				    <br />
+				    <!-- BREAK -->
+				  </section>
+
+					<p>
+						<i>
+							
+						</i>
+					</p>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
