--- a/tickets.html
+++ b/tickets.html
@@ -119,7 +119,7 @@
 
 			<br />
 			<br />
-			<h2 class="headers"><a href="https://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-28840941031">Buy Tickets Here!</a></h2>
+			<h2 class="headers"><a href="https://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-38777745280">Buy Tickets Here!</a></h2>
 			<h4 class="headers">Fish Tickets:</h4>
 			<h4>$25, one ticket required for each fish registered, multiple tickets may be purchased </h4>
 			<blockquote>
@@ -128,9 +128,9 @@
 			</blockquote>
 
 			<ul class="list">
-				<li>Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! If 300 fish are not registered, the remaining prizes will be drawn from all registered Fish Tickets.</li>
+				<li>Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big!</li>
 
-				<li>Everyone who registers a fish will receive two free Blugold Football Tickets (value $16).</li>
+				<li>Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in stations (value $16).</li>
 
 				<li> $100 gift cards will be given to the top fish by species: Northern, Walleye and Pan Fish.</li>
 
@@ -138,9 +138,9 @@
 			</ul>
 
 			<h4 class="headers">Fish Ticket Availability:</h4>
-			<h4>Tickets available online until 10:00pm on Friday, February 10th. Fish tickets will be available on February 11th, 2017: at the Weigh-in Stations 9am for $40. </h4>
+			<h4>Tickets will be available online until 10:00pm on Friday, February 9th. Fish tickets will be available on February 10th, 2017 at The View and at the Weigh-in Stations until 9am for $40. </h4>
 			<blockquote>
-				Fish tickets purchased online will be mailed through February 3rd to the address indicated. After February 3rd, tickets will be available for pick-up at the weigh-in station in The View.
+				Fish tickets purchased online will be mailed through February 2nd to the address indicated. After February 2nd, tickets will be available for pick-up at the weigh-in station at The View.
 				NOTE: You do not need to pick up your fish tickets until you are ready to weigh in a fish.
 
 			</blockquote>
@@ -148,10 +148,10 @@
 			<h4 class="headers">Raffle Tickets:</h4>
 			<h4><b>$5 each or 5 for $20</b></h4>
 			<blockquote>
-				$7,500 in prizes includes a 2016 Polaris Sportsman 4-wheeler, Vexilar Fish Sonar, Benelli Shotgun, and more.  Tickets can be purchased up until the drawing on Saturday, February 11th at the weigh-in stations.
+				$7,500 in prizes includes a 2017 Polaris Sportsman 450 4-wheeler.  Tickets can be purchased up until the drawing on Saturday, February 10th at the weigh-in stations and The View.
 
 				<br />
-				<br /> Raffle tickets purchased online will have the stubs completed by contest administrators and entered into the drawing. Claim tickets will be mailed through February 3rd to the address indicated.  After February 3rd, claim tickets will be available for
+				<br /> Raffle tickets purchased online will have the stubs completed by contest officials and entered into the drawing. Claim tickets will be mailed through February 2nd to the address indicated.  After February 2nd, claim tickets will be available for
 				pick-up at the weigh-in station in The View. NOTE: Raffle drawing begins at 3:00pm at The View. Please pick up claim tickets by 2:00pm.  Need not be present to win.
 			</blockquote>
 
@@ -165,16 +165,12 @@
 				<h3 class="headers">Tickets can also be purchased at: </h3>
 				<ul class="list">
 					<li>Scheels</li>
-					<li>Gordy’s Market select locations*</li>
+					<li>Mega Holiday Stations- Eau Claire and Chippewa Falls</li>
 					<li>Eau Claire Ford</li>
 					<li>The View at Lake Wissota</li>
 					<li>The Edge Pub &amp; Eatery on Lake Wissota</li>
-
 					<li>UWEC Recreation </h3></li>
 				</ul>
-				*Gordy’s Market Store Locations for Fish and Raffle Tickets: Lake Wissota, Downtown Chippewa Falls, Chippewa Commons, Birch Street (EC),
-				 Hamilton (EC), Clairemont (EC), Gordy’s West. Fish tickets only available at: Arcadia, Augusta, Barron, Black River Falls, Cornell, Chetek,
-				  Hayward, Ladysmith, Neillsville, Osseo, Rice Lake, Shell Lake, Spencer, Stanley, Whitehall
 			</div>
 	</section>
 
