Added mike adams from wissota lions club

--- a/contact.html
+++ b/contact.html
@@ -183,6 +183,10 @@
                       <td>Tammy Brunschmid</td>
                       <td>UWEC Recreation and Sport Facilities</td>
                     </tr>
+										<tr>
+                      <td>Mike Adams</td>
+                      <td>Wissota Lions Club</td>
+                    </tr>
                     <tr>
                       <td>Bill Cunningham</td>
                       <td>Wissota Lions Club</td>
