Added and removed sponsors

--- a/index.html
+++ b/index.html
@@ -213,14 +213,14 @@
 											Over $80,000 in cash and prizes including a
 											<b>2017 Ice Castle Scout</b>, win a <b>Ford F150 Truck</b> if you
 											catch and register the tagged fish! Prizes awarded to
-											the top 25 fish by weight and every 5th place thereafter
+											the top 25 fish and every 5th place thereafter
 											by weight to 300th place so even a small fish can win big!
 											<b>Each participant may register one fish per ticket</b>; tickets
 											are $25 with no limit on the number of tickets an
 											individual can purchase. Raffle prizes include a <b>2017 Polaris
 											Sportsman 450 4-wheeler</b>, raffle tickets are $5 each
 											or 5 for $20! Prizes for the top fish by weight in each
-											category: northern, walleye, and pan fish. 
+											category: northern, walleye, and pan fish.
 										</blockquote>
 						          <p>
 												<i>
