--- a/ticketsInProgress.html
+++ b/ticketsInProgress.html
@@ -115,75 +115,82 @@
 	<div class="wrapper"
 	<section id="content">
 		<div class="container">
-			<br />
-
-			<br />
-			<br />
-			<h2 class="headers"><a href="https://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-38777745280">Buy Tickets Here!</a></h2>
-			<h4 class="headers">Fish Tickets:</h4>
-			<h4>$25, one ticket required for each fish registered, multiple tickets may be purchased </h4>
-			<blockquote>
-				Over $80,000 in cash and prizes including a 2017 Ice Castle Scout, win a Ford F150 Truck if you catch and register the tagged fish!  Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
-				of the number of fish registered.
-			</blockquote>
-
-			<ul class="list">
-				<li>Prizes awarded to the top 25 fish and every 5th place thereafter by weight to the 300th place so even a small fish can win big!</li>
-
-				<li>Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in stations (value $16).</li>
-
-				<li> $100 gift cards will be given to the top fish by species: Northern, Walleye and Pan Fish.</li>
-
-				<li> “The One that Got Away” drawing from all Fish Ticket holders that did not register a fish. Turn in Fish Ticket stub at the Prize Table at The View by 2:30pm.</li>
-			</ul>
-
-			<h4 class="headers">Fish Ticket Availability:</h4>
-			<h4>Tickets will be available online until 10:00pm on Friday, February 9th. Fish tickets will be available on February 10th, 2017 at The View and at the Weigh-in Stations until 9am for $40. </h4>
-			<blockquote>
-				Fish tickets purchased online will be mailed through February 2nd to the address indicated. After February 2nd, tickets will be available for pick-up at the weigh-in station at The View.
-				NOTE: You do not need to pick up your fish tickets until you are ready to weigh in a fish.
-
-			</blockquote>
-
-			<h4 class="headers">Raffle Tickets:</h4>
-			<h4><b>$5 each or 5 for $20</b></h4>
-			<blockquote>
-				$7,500 in prizes includes a 2017 Polaris Sportsman 450 4-wheeler.  Tickets can be purchased up until the drawing on Saturday, February 10th at the weigh-in stations and The View.
+			<div class="row">
+				<br />
 
 				<br />
-				<br /> Raffle tickets purchased online will have the stubs completed by contest officials and entered into the drawing. Claim tickets will be mailed through February 2nd to the address indicated.  After February 2nd, claim tickets will be available for
-				pick-up at the weigh-in station in The View. NOTE: Raffle drawing begins at 3:00pm at The View. Please pick up claim tickets by 2:00pm.  Need not be present to win.
-			</blockquote>
+				<br />
+				<h2 class="headers"><a href="https://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-38777745280">Buy Tickets Here!</a></h2>
+				<h4 class="headers">Fish Tickets:</h4>
+				<h4>$25, one ticket required for each fish registered, multiple tickets may be purchased </h4>
+				<blockquote>
+					Over $80,000 in cash and prizes including a 2017 Ice Castle Scout, win a Ford F150 Truck if you catch and register the tagged fish!  Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
+					of the number of fish registered.
+				</blockquote>
 
-
-			<a target="_blank" href="assets/2018_Rules_of_the_Tournament.pdf" <button class="btn1">Click here to see the rules</button></a>
-			<br />
-			<!-- BREAK -->
-			<br />
-			<!-- BREAK -->
-			<div>
-				<h3 class="headers">Tickets can also be purchased at: </h3>
 				<ul class="list">
-					<li>Scheels</li>
-					<li>Mega Holiday Stations- Eau Claire and Chippewa Falls</li>
-					<li>Eau Claire Ford</li>
-					<li>The View at Lake Wissota</li>
-					<li>The Edge Pub &amp; Eatery on Lake Wissota</li>
-					<li>UWEC Recreation </h3></li>
+					<li>Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big!</li>
+
+					<li>Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in stations (value $16).</li>
+
+					<li> $100 gift cards will be given to the top fish by species: Northern, Walleye and Pan Fish.</li>
+
+					<li> “The One that Got Away” drawing from all Fish Ticket holders that did not register a fish. Turn in Fish Ticket stub at the Prize Table at The View by 2:30pm.</li>
 				</ul>
+
+				<h4 class="headers">Fish Ticket Availability:</h4>
+				<h4>Tickets will be available online until 10:00pm on Friday, February 9th. Fish tickets will be available on February 10th, 2017 at The View and at the Weigh-in Stations until 9am for $40. </h4>
+				<blockquote>
+					Fish tickets purchased online will be mailed through February 2nd to the address indicated. After February 2nd, tickets will be available for pick-up at the weigh-in station at The View.
+					NOTE: You do not need to pick up your fish tickets until you are ready to weigh in a fish.
+
+				</blockquote>
+
+				<h4 class="headers">Raffle Tickets:</h4>
+				<h4><b>$5 each or 5 for $20</b></h4>
+				<blockquote>
+					$7,500 in prizes includes a 2017 Polaris Sportsman 450 4-wheeler.  Tickets can be purchased up until the drawing on Saturday, February 10th at the weigh-in stations and The View.
+
+					<br />
+					<br /> Raffle tickets purchased online will have the stubs completed by contest officials and entered into the drawing. Claim tickets will be mailed through February 2nd to the address indicated.  After February 2nd, claim tickets will be available for
+					pick-up at the weigh-in station in The View. NOTE: Raffle drawing begins at 3:00pm at The View. Please pick up claim tickets by 2:00pm.  Need not be present to win.
+				</blockquote>
+
+
+				<a target="_blank" href="assets/2018_Rules_of_the_Tournament.pdf" <button class="btn1">Click here to see the rules</button></a>
+				<br />
+				<!-- BREAK -->
+				<br />
+				<!-- BREAK -->
+				<div>
+					<h3 class="headers">Tickets can also be purchased at: </h3>
+					<ul class="list">
+						<li>Scheels</li>
+						<li>Mega Holiday Stations- Eau Claire and Chippewa Falls</li>
+						<li>Eau Claire Ford</li>
+						<li>The View at Lake Wissota</li>
+						<li>The Edge Pub &amp; Eatery on Lake Wissota</li>
+						<li>UWEC Recreation </h3></li>
+					</ul>
+				</div>
+
+				<div class="col-sm-6">
+					PLACE OTHER INFO HERE
+				</div>
 			</div>
+		</div>
+
 	</section>
 
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
-	<script src="js/main.js" type="text/javascript"></script>
-</div>
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+		<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
+		<script src="js/main.js" type="text/javascript"></script>
 </body>
 
-<footer>
+<footer display="inline-block">
 	<div class="footer hidden-xs">
 		<div class="sponsorBar">
 			<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
@@ -195,7 +202,7 @@
 			<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo">
 			<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
 			<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
-			<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
+			<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/gollon.png" alt="Gollon Brothers"></a>
 			<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
 			<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
 			<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
@@ -217,7 +224,7 @@
 				<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo">
 				<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
 				<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
-				<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
+				<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/gollon.png" alt="Gollon Brothers"></a>
 				<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
 				<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
 				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
