--- a/sponsors.html
+++ b/sponsors.html
@@ -182,10 +182,10 @@
 				<div class="col-sm-3 center">
 					<a href="http://www.uwec.edu/dining/" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo"></a>
 				</div>
-					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-sm-3 center">
-					<a href="http://www.gollonbait.com/" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/gollon.png" alt="Gollon brothers"></a>
+					<a href="http://www.ttmtech.com/" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
 				</div>
+					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 			<!-- #row  -->
 			</div>
 
