--- a/sponsors.html
+++ b/sponsors.html
@@ -185,6 +185,9 @@
 				<div class="col-sm-3 center">
 					<a href="http://www.ttmtech.com/" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
 				</div>
+				<div class="col-sm-3 center">
+					<a href="https://mydynamicfitness.com/" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+				</div>
 					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 			<!-- #row  -->
 			</div>
