added megaholiday to footer

--- a/directions.html
+++ b/directions.html
@@ -186,6 +186,7 @@
 			<a href="http://www.weau.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
 			<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ford.png" alt="Ford"></a>
 			<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
+			<a href="http://www.megacoop.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
 			<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
 			<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo">
 			<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
@@ -208,6 +209,7 @@
 				<a href="http://www.weau.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
 				<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ford.png" alt="Ford"></a>
 				<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
+				<a href="http://www.megacoop.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
 				<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
 				<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo">
 				<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
